SEGFAULT: When setting Best-Quality on a Bump Map in GLSL viewport #28613

Closed
opened 2011-09-11 00:12:53 +02:00 by Tommy Helgevold · 8 comments

%%%Blender crashes with a Segfault when the following setup is created, please follow the steps to retrace:

Machine: Linux 64 bit - Slackware 13.37
8 GB ram
Processor: Q6600 - Quad
Blender version: Latest SVN compiled with Make

Retrace:

  1. Open a new clean default scene.
  2. Throw a texture (any IMAGE texture / .jpg file) on the Default CUBE.
  3. Map it!
  4. Activate NORMAL mapping (Tick NORMAL and set a value, any + value)
  5. Open the Tool menu with N and go to DISPLAY, set Shading to GLSL
  6. Now...set the VIEWPORT shading to TEXTURED
  7. Go to your TEXTURE menu again and scroll down until you find the Bump Mapping menu. Set the dropdown menu to BEST QUALITY or DEFAULT
  8. Crashes with the following error messages:

GPU invalid function parameter in mtex_bump_init_objspace.
GPU invalid function parameter in mtex_bump_init_texturespace.
GPU invalid function parameter in mtex_bump_init_viewspace.
GPU invalid function parameter in mtex_bump_tap3.
GPU invalid function parameter in mtex_bump_tap5.
GPU invalid function parameter in mtex_bump_deriv.
GPU invalid function parameter in mtex_bump_apply.
GPU invalid function parameter in mtex_bump_apply_texspace.
Segmentation fault

%%%

%%%Blender crashes with a Segfault when the following setup is created, please follow the steps to retrace: Machine: Linux 64 bit - Slackware 13.37 8 GB ram Processor: Q6600 - Quad Blender version: Latest SVN compiled with Make Retrace: 1) Open a new clean default scene. 2) Throw a texture (any IMAGE texture / .jpg file) on the Default CUBE. 3) Map it! 4) Activate NORMAL mapping (Tick NORMAL and set a value, any + value) 5) Open the Tool menu with N and go to DISPLAY, set Shading to GLSL 6) Now...set the VIEWPORT shading to TEXTURED 7) Go to your TEXTURE menu again and scroll down until you find the Bump Mapping menu. Set the dropdown menu to BEST QUALITY or DEFAULT 8) Crashes with the following error messages: GPU invalid function parameter in mtex_bump_init_objspace. GPU invalid function parameter in mtex_bump_init_texturespace. GPU invalid function parameter in mtex_bump_init_viewspace. GPU invalid function parameter in mtex_bump_tap3. GPU invalid function parameter in mtex_bump_tap5. GPU invalid function parameter in mtex_bump_deriv. GPU invalid function parameter in mtex_bump_apply. GPU invalid function parameter in mtex_bump_apply_texspace. Segmentation fault %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm this issue on Linux 64, Ubuntu 11.04, 8GB RAM, Intel Core Duo 2.33 processor. Blender doesn't crash, but it freezes up, and stops responding. %%%

%%%I can confirm this issue on Linux 64, Ubuntu 11.04, 8GB RAM, Intel Core Duo 2.33 processor. Blender doesn't crash, but it freezes up, and stops responding. %%%

%%%I can confirm this with recent svn (40118). Order doesn't matter. As soon as you click on "best quality" blender instantly crashes.
The "GPU invalid function" messages don't seem do relate to this. They appear as soon as you switch from multitexture to GLSL. No matter if NOR is enabled or not.

It is also not related to best quality. Crash happens if you switch to any other method and then back to "default". Other modes seem to work fine.

Here is the backtrace of GDB:

  • 0 0x0000000000ab94bc in gpu_node_input_link ()
  • 1 0x0000000000aba3d7 in GPU_link ()
  • 2 0x0000000000ad1532 in GPU_shaderesult_set ()
  • 3 0x0000000000ad1a95 in GPU_material_from_blender ()
  • 4 0x0000000000abe581 in GPU_begin_object_materials ()
  • 5 0x00000000007abd33 in draw_mesh_object ()
  • 6 0x00000000007b1b8d in draw_object ()
  • 7 0x000000000079e577 in view3d_main_area_draw ()
  • 8 0x0000000000981dd5 in ED_region_do_draw ()
  • 9 0x0000000000762419 in wm_draw_update ()
  • 10 0x000000000075a808 in WM_main ()
  • 11 0x0000000000753238 in main ()

OS: openSuSE 11.4 64bit%%%

%%%I can confirm this with recent svn (40118). Order doesn't matter. As soon as you click on "best quality" blender instantly crashes. The "GPU invalid function" messages don't seem do relate to this. They appear as soon as you switch from multitexture to GLSL. No matter if NOR is enabled or not. It is also not related to best quality. Crash happens if you switch to any other method and then back to "default". Other modes seem to work fine. Here is the backtrace of GDB: - 0 0x0000000000ab94bc in gpu_node_input_link () - 1 0x0000000000aba3d7 in GPU_link () - 2 0x0000000000ad1532 in GPU_shaderesult_set () - 3 0x0000000000ad1a95 in GPU_material_from_blender () - 4 0x0000000000abe581 in GPU_begin_object_materials () - 5 0x00000000007abd33 in draw_mesh_object () - 6 0x00000000007b1b8d in draw_object () - 7 0x000000000079e577 in view3d_main_area_draw () - 8 0x0000000000981dd5 in ED_region_do_draw () - 9 0x0000000000762419 in wm_draw_update () - 10 0x000000000075a808 in WM_main () - 11 0x0000000000753238 in main () OS: openSuSE 11.4 64bit%%%

%%%Same Here, Ubuntu 10.10 64Bits, 8Gb Ram, Geforce 8600GT, AMD Athlon II X4 640.

GPU invalid function parameter in mtex_bump_init_objspace.
GPU invalid function parameter in mtex_bump_init_texturespace.
GPU invalid function parameter in mtex_bump_init_viewspace.
GPU invalid function parameter in mtex_bump_tap3.
GPU invalid function parameter in mtex_bump_tap5.
GPU invalid function parameter in mtex_bump_deriv.
GPU invalid function parameter in mtex_bump_apply.
GPU invalid function parameter in mtex_bump_apply_texspace.
Segmentation fault

%%%

%%%Same Here, Ubuntu 10.10 64Bits, 8Gb Ram, Geforce 8600GT, AMD Athlon II X4 640. GPU invalid function parameter in mtex_bump_init_objspace. GPU invalid function parameter in mtex_bump_init_texturespace. GPU invalid function parameter in mtex_bump_init_viewspace. GPU invalid function parameter in mtex_bump_tap3. GPU invalid function parameter in mtex_bump_tap5. GPU invalid function parameter in mtex_bump_deriv. GPU invalid function parameter in mtex_bump_apply. GPU invalid function parameter in mtex_bump_apply_texspace. Segmentation fault %%%

%%%sorry, posted wrong backtrace. Here is the right one from a debug build:

  • 0 gpu_node_input_link (node=0x36e7708, link=0x3388dd8, type=1) at source/blender/gpu/intern/gpu_codegen.c:813
  • 1 0x0000000000aa0c37 in GPU_link (mat=0x348de38, name=) at source/blender/gpu/intern/gpu_codegen.c:1142
  • 2 0x0000000000ab7d92 in do_material_tex (shi=0x7fffffffd110, shr=0x7fffffffd180) at source/blender/gpu/intern/gpu_material.c:1183
  • 3 GPU_shaderesult_set (shi=0x7fffffffd110, shr=0x7fffffffd180) at source/blender/gpu/intern/gpu_material.c:1299
  • 4 0x0000000000ab82f5 in GPU_blender_material (scene=, ma=0x23b9648) at source/blender/gpu/intern/gpu_material.c:1395
  • 5 GPU_material_from_blender (scene=, ma=0x23b9648) at source/blender/gpu/intern/gpu_material.c:1417

6 0x0000000000aa4de1 in GPU_begin_object_materials (v3d=, rv3d=, scene=, ob=0x23b8908, glsl=1, do_alpha_pass=0x7fffffffd3d0)

  at source/blender/gpu/intern/gpu_draw.c:1058
  • 7 0x0000000000790bd3 in draw_mesh_object (scene=0x23b5bf8, ar=0x23a3478, v3d=0x23a39b8, rv3d=0x23a35f8, base=0x23b72f8, dt=, flag=0) at source/blender/editors/space_view3d/drawobject.c:2959
  • 8 0x0000000000796a2d in draw_object (scene=0x23b5bf8, ar=0x23a3478, v3d=0x23a39b8, base=0x23b72f8, flag=0) at source/blender/editors/space_view3d/drawobject.c:5949
  • 9 0x0000000000783417 in view3d_main_area_draw (C=0x1f029f8, ar=) at source/blender/editors/space_view3d/view3d_draw.c:2658
  • 10 0x0000000000966ef5 in ED_region_do_draw (C=0x1f029f8, ar=0x23a3478) at source/blender/editors/screen/area.c:429
  • 11 0x0000000000747319 in wm_method_draw_triple (C=) at source/blender/windowmanager/intern/wm_draw.c:597
  • 12 wm_draw_update (C=) at source/blender/windowmanager/intern/wm_draw.c:776
  • 13 0x000000000073f628 in WM_main %%%
%%%sorry, posted wrong backtrace. Here is the right one from a debug build: - 0 gpu_node_input_link (node=0x36e7708, link=0x3388dd8, type=1) at source/blender/gpu/intern/gpu_codegen.c:813 - 1 0x0000000000aa0c37 in GPU_link (mat=0x348de38, name=<value optimized out>) at source/blender/gpu/intern/gpu_codegen.c:1142 - 2 0x0000000000ab7d92 in do_material_tex (shi=0x7fffffffd110, shr=0x7fffffffd180) at source/blender/gpu/intern/gpu_material.c:1183 - 3 GPU_shaderesult_set (shi=0x7fffffffd110, shr=0x7fffffffd180) at source/blender/gpu/intern/gpu_material.c:1299 - 4 0x0000000000ab82f5 in GPU_blender_material (scene=<value optimized out>, ma=0x23b9648) at source/blender/gpu/intern/gpu_material.c:1395 - 5 GPU_material_from_blender (scene=<value optimized out>, ma=0x23b9648) at source/blender/gpu/intern/gpu_material.c:1417 # 6 0x0000000000aa4de1 in GPU_begin_object_materials (v3d=<value optimized out>, rv3d=<value optimized out>, scene=<value optimized out>, ob=0x23b8908, glsl=1, do_alpha_pass=0x7fffffffd3d0) ``` at source/blender/gpu/intern/gpu_draw.c:1058 ``` - 7 0x0000000000790bd3 in draw_mesh_object (scene=0x23b5bf8, ar=0x23a3478, v3d=0x23a39b8, rv3d=0x23a35f8, base=0x23b72f8, dt=<value optimized out>, flag=0) at source/blender/editors/space_view3d/drawobject.c:2959 - 8 0x0000000000796a2d in draw_object (scene=0x23b5bf8, ar=0x23a3478, v3d=0x23a39b8, base=0x23b72f8, flag=0) at source/blender/editors/space_view3d/drawobject.c:5949 - 9 0x0000000000783417 in view3d_main_area_draw (C=0x1f029f8, ar=<value optimized out>) at source/blender/editors/space_view3d/view3d_draw.c:2658 - 10 0x0000000000966ef5 in ED_region_do_draw (C=0x1f029f8, ar=0x23a3478) at source/blender/editors/screen/area.c:429 - 11 0x0000000000747319 in wm_method_draw_triple (C=<value optimized out>) at source/blender/windowmanager/intern/wm_draw.c:597 - 12 wm_draw_update (C=<value optimized out>) at source/blender/windowmanager/intern/wm_draw.c:776 - 13 0x000000000073f628 in WM_main %%%

%%%I did some further testing. the bug exists since svn revision 40061 by Benoit Bolsee, which introduces the python module to export GLSL shader.
So he might look into this.%%%

%%%I did some further testing. the bug exists since svn revision 40061 by Benoit Bolsee, which introduces the python module to export GLSL shader. So he might look into this.%%%

%%%Fixed in svn rev40158. Thanks for the report and backtraces, closing now.%%%

%%%Fixed in svn rev40158. Thanks for the report and backtraces, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28613
No description provided.