Fix #28613: SEGFAULT: When setting Best-Quality on a Bump Map in GLSL viewport

Problem was caused by CRLF line ending instead of LF line ending.
Re-generate pu_shader_material to use LF line ending and made gpu codegen
treat \r as space character.