source/blender/gpu/intern/gpu_codegen.c
@@ -93,7 +93,7 @@ static char *gpu_str_skip_token(char *str, char *token, int max)
 
 	/* skip a variable/function name */
 	while(*str) {
-		if(ELEM6(*str, ' ', '(', ')', ',', '\t', '\n'))
+		if(ELEM7(*str, ' ', '(', ')', ',', '\t', '\n', '\r'))
 			break;
 		else {
 			if(token && len < max-1) {
@@ -111,7 +111,7 @@ static char *gpu_str_skip_token(char *str, char *token, int max)
 	/* skip the next special characters:
 	 * note the missing ')' */
 	while(*str) {
-		if(ELEM5(*str, ' ', '(', ',', '\t', '\n'))
+		if(ELEM6(*str, ' ', '(', ',', '\t', '\n', '\r'))
 			str++;
 		else
 			break;
